# odch-gateway

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  config.example.toml
.github/workflows/: ci.yml  release.yml
admin-ui/: app.js  index.html  style.css
src/: bus.rs  config.rs  error.rs  event.rs  main.rs  state.rs
src/admin_ui/: auth.rs  mod.rs
src/api/: auth.rs  chat.rs  commands.rs  hub.rs  mod.rs  moderation.rs  rate_limit.rs  users.rs  webhooks.rs  websocket.rs
src/db/: mod.rs  models.rs  pool.rs  queries.rs
src/nmdc/: admin.rs  client.rs  lock_to_key.rs  mod.rs  protocol.rs
src/webhook/: delivery.rs  manager.rs  mod.rs
