[package]
name = "odch-gateway"
version = "0.3.2"
edition = "2021"
description = "REST/WebSocket API gateway for OpenDCHub"
license = "MIT"
repository = "https://github.com/typhonius/odch-gateway"
homepage = "https://github.com/typhonius/odch-gateway"
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "any"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
bytes = "1"
url = "2"
